--- a/app/src/main/res/layout/fragment_selected_item.xml
+++ b/app/src/main/res/layout/fragment_selected_item.xml
@@ -21,7 +21,7 @@
             android:textSize="16sp" />
 
 <!--         图片是福利哈... -->
-        <com.example.developer_headlines.view.CircleImageView
+        <com.example.developer_headlines.views.CircleImageView
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:layout_marginLeft="5dp"
